Fix modal scrollbar style fix

--- a/_shared/in-page/shared-styling.scss
+++ b/_shared/in-page/shared-styling.scss
@@ -94,3 +94,7 @@ body {
     overflow-y: scroll !important;
 
 }
+
+.no-scrollbar {
+    overflow-y: auto;
+}
